<resources>
    <string name="app_name">Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_items_of_list">List</string>
    <string name="dialog_OK_btn">OK</string>
    <string name="dialog_Cancel_btn">Cancel</string>
    <string name="new_list_prompt">New list name :</string>
    <string name="new_item_name_placeholder">Name</string>
    <string name="new_item_quantity_placeholder">Quantity</string>
    <string name="new_item_price_placeholder">Price</string>
    <string name="action_test1">xml test</string>
    <string name="new_item_dialog_title">New item</string>
    <string name="main_list_ms_menu_title">Select Lists</string>
    <string name="main_list_ms_menu_subtitle1">One list selected</string>
    <string name="main_list_ms_menu_subtitle2">lists selected</string>
    <string name="update_item_dialog_title">Edit</string>
    <string name="update_item_dialog_save_btn">Save</string>
    <string name="action_defitems">Edit my favorite goods</string>
</resources>
