<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <AutoCompleteTextView
        android:id="@+id/autoCompleteItemName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/new_item_name_placeholder"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/newItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/new_item_name_placeholder"
        android:inputType="">

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/new_item_quantity_placeholder"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/new_item_price_placeholder"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:spinnerMode="dialog"
        />


</LinearLayout>
